--- a/home/templates/home/about_us.html
+++ b/home/templates/home/about_us.html
@@ -2,53 +2,69 @@
 {% load static %}
 
 {% block page_header %}
-<div class="container header-container">
+<!-- <div class="container header-container">
     <div class="row">
         <div class="col">
         </div>
     </div>
-</div>
+</div> -->
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid h-100">
-    <div class="row h-100">
-        <div class="row">
-            <h1 class="col-12">About Us</h1>
-            <div class="col col-6-md">
-                <img class="aboutimg" src="/media/buses/17.jpg" alt="">
-            </div>
-            <div class="col col-6-md">
-                <p>The London Omnibus Traction Society was founded in 1964, and now has one of the largest memberships of
+<div class="container">
+    <div class="row">
+        <h1 class="col text-center">About Us</h1>
+    </div>
+    <div class="">    
+        <img src="/media/buses/17.jpg" class="aboutimg img-fluid"></img>
+        <p><br>
+                The London Omnibus Traction Society was founded in 1964, and now has one of the largest memberships
+                of
                 any bus enthusiasts' organisation in the UK.
+                <br>
+                <br>
 
                 LOTS covers Greater London and the surrounding area, which roughly corresponds to that of London
-                Transport's Country territory before 1970. This latter area is bounded by Gravesend, Crawley, Guildford,
+                Transport's Country territory before 1970. This latter area is bounded by Gravesend, Crawley,
+                Guildford,
                 Windsor, Aylesbury, Luton, Harlow and Tilbury.
-
+                <br>
+                <br>
                 We mail our magazine-style newsletter THE LONDON BUS (TLB) to members every month. Typically TLB
-                contains 40 A5 pages packed with news and information about the various bus operators - their vehicles,
+                contains 40 A5 pages packed with news and information about the various bus operators - their
+                vehicles,
                 routes, policies, publicity, etc - and 8 topical photos in colour. An example issue can be viewed
                 on-line here.
-
-                We also publish the LONDON BUS MAGAZINE (LBM) 4 times a year which is profusely illustrated and printed
-                on glossy paper. It features modern and historical articles and recent news accompanied by informatively
+                <br>
+                <br>
+                We also publish the LONDON BUS MAGAZINE (LBM) 4 times a year which is profusely illustrated and
+                printed
+                on glossy paper. It features modern and historical articles and recent news accompanied by
+                informatively
                 captioned colour pictures.
-
+                <br>
+                <br>
                 Our most substantial publication is LONDON BUS REVIEW (REV). Published each Spring it tells you
-                everything you could possibly want to know about what’s been happening in and around London during the
-                preceding year. Routes, vehicles (new, withdrawn and current), operators and politics – it’s all there
+                everything you could possibly want to know about what’s been happening in and around London during
+                the
+                preceding year. Routes, vehicles (new, withdrawn and current), operators and politics – it’s all
+                there
                 profusely illustrated with well over a hundred colour pictures.
-
+                <br>
+                <br>
                 And that’s not all! Each year around six supplementary publications known as SUPs are produced on
-                specific subjects. See the Publications page for information about these along with TLB, LBM, REV and
+                specific subjects. See the Publications page for information about these along with TLB, LBM, REV
+                and
                 other publications.
-
-                Most months we hold meetings at Conway Hall in central London, featuring guest speakers from both the
-                bus industry and the enthusiast community, plus slide and film shows. Entrance is free to members and
-                our sales stand will be there at each meeting.</p>
-            </div>
+                <br>
+                <br>
+                Most months we hold meetings at Conway Hall in central London, featuring guest speakers from both
+                the
+                bus industry and the enthusiast community, plus slide and film shows. Entrance is free to members
+                and
+                our sales stand will be there at each meeting.
+        </p>
         </div>
-    </div>
 </div>
+
 {% endblock %}
