--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,12 +2,12 @@
 {% load static %}
 
 {% block page_header %}
-<div class="container header-container">
+<!-- <div class="container header-container">
     <div class="row">
         <div class="col">
         </div>
     </div>
-</div>
+</div> -->
 {% endblock %}
 
 {% block content %}
@@ -15,12 +15,8 @@
 <div class="container h-100">
     <div class="row h-100">
         <div class="col-7 col-6-md my-auto">
-            <h1 class="display-4 logo-font text-white">Publication Memberships here</h1>
-            <div class="my-5">
-                <h4>
-                    <a href="#" class="shop-now-button btn btn-lg border border-dark shadow text-uppercase py-3">Join Now</a>
-                </h4>
-            </div>
+            <a href="{% url 'membership' %}" id="btntopl"class="shop-now-button py-3 btn btn-lg border border-dark shadow text-uppercase">How to join!</a>
+            <!-- <h1 class="display-4 logo-font text-white">Publication Memberships here</h1> -->
         </div>
     </div>
 </div>
