--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
     {% block meta %}
@@ -14,8 +15,7 @@
     {% endblock %}
 
     {% block corecss %}
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
@@ -27,11 +27,13 @@
     <!-- <script src="https://kit.fontawesome.com/9f41e2550b.js" crossorigin="anonymous"></script> -->
     <script src="https://kit.fontawesome.com/4863a75fd6.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js">
+    </script>
     {% endblock %}
     <!-- Google Fonts -->
     <!-- <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet"> -->
@@ -61,12 +63,12 @@
 </head>
 
 <body>
-    <header class="container-fluid fixed-top">
+    <header class="container-fluid sticky-top">
         <div class="row tophead">
-            <div class="col-4 col-sm-6 my-auto py-1 py-lg-0 text-lg-left">
+            <div class="col-4 col-sm-6 my-auto py-3 text-lg-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                    <img class="d-none d-sm-block" src="/media/logo-red.png" height="75px"alt="">
-                    <img class="d-block d-sm-none" src="/media/logo-sm.png" height="75px"alt="">
+                    <img class="d-none d-sm-block" src="/media/logo-red.png" height="75px" alt="">
+                    <img class="d-block d-sm-none" src="/media/logo-sm.png" height="75px" alt="">
                     <h2 class="logo-font text-black my-0">
                         <!-- <strong>London Omnibus Traction Society</strong> -->
                     </h2>
@@ -87,14 +89,14 @@
                     </div>
                 </form>
             </div> -->
-            <div class="col-8 col-sm-6 my-auto py-1 py-lg-0">
-                <ul class="list-inline list-unstyled text-center text-lg-right my-0">
-                    <li class="list-inline-item dropdown">
+            <div class="col-8 col-sm-6 my-auto py-2 mx-0">
+                <ul class="list-inline list-unstyled text-end text-lg-right my-0 mx-0">
+                    <li class="list-inline-item dropdown align-middle">
                         <a href="#" class="text-black nav-link" id="user-options" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">
                             <div class="text-center">
                                 <div><i class="fas fa-user fa-lg"></i></div>
-                                <p class="my-0">My Account</p>
+                                <p class="my-auto py-auto">My Account</p>
                             </div>
                         </a>
                         <div class="dropdown-menu border-0" aria-labelledby="user-options">
@@ -110,12 +112,12 @@
                             {% endif %}
                         </div>
                     </li>
-                    <li class="list-inline-item">
+                    <li class="list-inline-item align-middle">
                         <a href=""
                             class="{% if grand_total %}text-info font-weight-bold{% else %} text-black{% endif %} nav-link">
                             <div class="text-center">
                                 <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-                                <p class="my-o">
+                                <p class="my-auto py-auto">
                                     {% if grand_total %}
                                     £{{ grand_total|floatformat:2 }}
                                     {% else %}
@@ -125,15 +127,24 @@
                             </div>
                         </a>
                     </li>
+                    <li class="list-inline-item">
+                        <!-- <nav class="navbar navbar-expand-lg navbar-light  d-block d-lg-none">
+                            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
+                                aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                                <span class="navbar-toggler-icon"></span>
+                            </button> -->
+                            {% include 'includes/mob-nav.html' %}
+                        <!-- </nav> -->
+                    </li>
                 </ul>
             </div>
         </div>
-        <div class="row bg-white">
+        <div class="row bg-white d-none d-lg-block">
             <nav class="navbar navbar-expand-lg navbar-light w-100">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
+                    aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                {% include 'includes/mob-nav.html' %}
                 {% include 'includes/main-nav.html' %}
             </nav>
         </div>
