Links updating progressing 32 left

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,7 +15,7 @@
 <div class="container h-100">
     <div class="row h-100">
         <div class="col-7 col-6-md my-auto">
-            <a href="{% url 'membership' %}" id="btntopl"class="shop-now-button py-3 btn btn-lg border border-dark shadow text-uppercase">How to join!</a>
+            <a href="{% url 'membership' %}" id="btntopl"class="shop-now-button py-3 btn btn-lg border border-dark shadow-lg text-uppercase">How to join!</a>
             <!-- <h1 class="display-4 logo-font text-white">Publication Memberships here</h1> -->
         </div>
     </div>
