--- a/home/templates/home/publications.html
+++ b/home/templates/home/publications.html
@@ -2,12 +2,12 @@
 {% load static %}
 
 {% block page_header %}
-<div class="container header-container">
+<!-- <div class="container header-container">
     <div class="row">
         <div class="col">
         </div>
     </div>
-</div>
+</div> -->
 {% endblock %}
 
 {% block content %}
